2021-05-28  Chris Dumez  <cdumez@apple.com>

        Unreviewed build fix after r277881.

        Add missing header include.

        * wtf/cocoa/FileSystemCocoa.mm:

2021-05-27  Said Abou-Hallawa  <said@apple.com>

        Values of keySplines control points must all be in the range 0 to 1
        https://bugs.webkit.org/show_bug.cgi?id=226336

        Reviewed by Sam Weinig.

        * wtf/MathExtras.h:
        (isInRange):
        There are a least couple of implementations of this function in WebCore.
        The next step is to remove the redundant code in WebCore and use this one.

2021-05-27  Robin Morisset  <rmorisset@apple.com>

        AirAllocateStackByGraphColoring should use the optimized interference graphs from AirAllocateRegistersByGraphColoring
        https://bugs.webkit.org/show_bug.cgi?id=226258

        Reviewed by Phil Pizlo.

        I moved the interference graphs datastructures from AirAllocateRegistersByGraphColoring to their own wtf/InterferenceGraph.h file.
        There are three of them:
        - SmallInterferenceGraph, best for n < 400
        - LargeInterferenceGraph, for n < 2**16
        - HugeInterferenceGraph, for n up to 2**32
        I also added "Iterable" versions of them, that have an operator[] method whose result you can iterate on to get all the indices which interfere with a given index.
        SmallIterableInterferenceGraph is the same as the non-iterable version, but the Large and Huge versions are a bit slower than their counterparts and use 2x memory.

        All of these were tested by running JetStream2 with the TEST_OPTIMIZED_INTERFERENCE_GRAPH set to 1.
        This flag makes the optimized datastructures run in parallel with a reference implementation, and their results are checked for equality on every method call.
        There is one small difference allowed: iteration is not guaranteed to go through elements in the same order.
