@@ -163,15 +163,20 @@ static int toIOPolicyScope(PolicyScope scope)
 
 bool setAllowsMaterializingDatalessFiles(bool allow, PolicyScope scope)
 {
+#ifdef IOPOL_TYPE_VFS_MATERIALIZE_DATALESS_FILES
     if (setiopolicy_np(IOPOL_TYPE_VFS_MATERIALIZE_DATALESS_FILES, toIOPolicyScope(scope), allow ? IOPOL_MATERIALIZE_DATALESS_FILES_ON : IOPOL_MATERIALIZE_DATALESS_FILES_OFF) == -1) {
         LOG_ERROR("FileSystem::setAllowsMaterializingDatalessFiles(%d): setiopolicy_np call failed, errno: %d", allow, errno);
         return false;
     }
     return true;
+#else
+    return false;
+#endif
 }
 
 Optional<bool> allowsMaterializingDatalessFiles(PolicyScope scope)
 {
+#ifdef IOPOL_TYPE_VFS_MATERIALIZE_DATALESS_FILES
     int ret = getiopolicy_np(IOPOL_TYPE_VFS_MATERIALIZE_DATALESS_FILES, toIOPolicyScope(scope));
     if (ret == IOPOL_MATERIALIZE_DATALESS_FILES_ON)
         return true;
@@ -179,6 +184,9 @@ Optional<bool> allowsMaterializingDatalessFiles(PolicyScope scope)
         return false;
     LOG_ERROR("FileSystem::allowsMaterializingDatalessFiles(): getiopolicy_np call failed, errno: %d", errno);
     return std::nullopt;
+#else
+    return std::nullopt;
+#endif
 }
 
 #if PLATFORM(IOS_FAMILY)
