@@ -2,6 +2,17 @@
 
         Unreviewed build fix after r277881.
 
+        Deal with IOPOL_TYPE_VFS_MATERIALIZE_DATALESS_FILES potentially not being defined on
+        older OSes.
+
+        * wtf/cocoa/FileSystemCocoa.mm:
+        (WTF::FileSystemImpl::setAllowsMaterializingDatalessFiles):
+        (WTF::FileSystemImpl::allowsMaterializingDatalessFiles):
+
+2021-05-28  Chris Dumez  <cdumez@apple.com>
+
+        Unreviewed build fix after r277881.
+
         Add missing header include.
 
         * wtf/cocoa/FileSystemCocoa.mm:
